--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover" />
-    <title>奶奶的卡五星 (规则完善版)</title>
+    <title>卡五星</title>
     <style>
         /* --- 1. 全局设置 --- */
         html, body {
@@ -141,7 +141,7 @@
     </div>
 
     <div id="lobby-layer" style="display:none;">
-        <div class="lobby-title">🀄️ 单机卡五星 (定制版)</div>
+        <div class="lobby-title">🀄️单机卡五星🀄️ </div>
         <div class="lobby-info">您的金豆: <span id="user-score-disp-1">读取中...</span></div>
         <div class="room-container">
             <div class="room-btn bg-green" onclick="enterRoom(0)"><div class="room-name">🟢 初级场</div><div class="room-desc">底分100</div></div>
@@ -299,7 +299,7 @@
     var CUR_ROOM = null;
     var G = { deck:[], ps:[], turn:0, last:-1, from:-1, sel:-1, drawn:false, gangInfo:null, pendingLiang:false };
 
-    function showAbout() { alert("👵 奶奶的卡五星 v1.8\n\n专为长辈定制的清爽无广版卡五星\n\n祝奶奶身体健康，手气长虹！"); }
+    function showAbout() { alert("👵 卡五星 v2.1\n\n清爽无广版卡五星"); }
     function confirmExit() { if(confirm("确定要退出这局游戏返回大厅吗？")) { backToLobby(); } }
 
     function initLobby() { IN_GAME = false; pauseBGM(); safeStyle('lobby-layer', 'display', 'flex'); safeStyle('game-layer', 'display', 'none'); safeStyle('modal', 'display', 'none'); safeStyle('hand-viewer', 'display', 'none'); if(SCORE <= 0) { SCORE = 3000; saveData(); safeStyle('toast', 'display', 'block'); setTimeout(function(){safeStyle('toast', 'display', 'none')}, 2500); } updateGlobalScore(); safeStyle('lock-1', 'display', SCORE < 10000 ? 'flex' : 'none'); safeStyle('lock-2', 'display', SCORE < 50000 ? 'flex' : 'none'); }
@@ -418,3 +418,4 @@
 </script>
 </body>
 </html>
+
